bat.string1.lessons.bat.string1.StringYak.scala.error
stringYak:11: error: not found: value drop
  s+=drop(i)
     ^stringYak:11: error: not found: value i
  s+=drop(i)
          ^